fix: use Files.write instead of Files.writeString